# home-server

./: .clang-format  .clang-tidy  .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  bootstrap-boost.sh  bootstrap-conan.sh  bootstrap-debian.sh  bootstrap-openssl.sh  bootstrap-xmake.sh  bootstrap.sh  conanfile.txt  conanprofile  xmake.lua
dependencies/libquickmail/: CMakeLists.txt
server/: CMakeLists.txt  format-all.sh  xmake.lua
server/api/: beacon_listener.cpp  beacon_listener.hpp  common.hpp  http_session.cpp  http_session.hpp  message.hpp  network_manager.cpp  network_manager.hpp  user.cpp  user.hpp  user_manager.cpp  user_manager.hpp  user_manager_api.cpp  websocket_session.cpp  websocket_session.hpp  websocket_session_set.cpp  websocket_session_set.hpp  xmake.lua
server/api/io/: dynamic_resources.cpp  dynamic_resources.hpp  mime.cpp
server/common/: common.hpp  helper.cpp  helper.hpp  log.cpp  worker.cpp  worker.hpp  xmake.lua
server/common/libraries/: boost.hpp
server/database/: database.cpp  database.hpp  xmake.lua
server/database/empty/: empty_database.cpp  empty_database.hpp
server/database/sqlite/: sqlite_database.cpp  sqlite_database.hpp  sqlite_database_entity.cpp  sqlite_database_script_source.cpp  sqlite_database_user.cpp
server/home/: CMakeLists.txt  DeviceControllerPlugin.hpp  DevicePlugin.hpp  Log.cpp  Log.h  Log.hpp  Plugin.cpp  Plugin.h  Plugin.hpp  PluginManager.hpp  README.md  Script.cpp  Script.h  Script.hpp  Value.hpp  boost.h  boost.hpp  common.h  common.hpp  export.h  memory.h
server/home-api/: BeaconListener.cpp  BeaconListener.hpp  HttpSession.cpp  HttpSession.hpp  Message._cpp  NetworkManager.cpp  NetworkManager.hpp  User.cpp  UserManager.Api.cpp  UserManager.cpp  UserManager.hpp  WebSocketSession.cpp  WebSocketSession.hpp  WebSocketSessionSet.cpp  WebSocketSessionSet.hpp  xmake.lua
server/home-api/io/: DynamicResources.cpp  DynamicResources.hpp
server/home-api/json/: JsonApi.HTTP._cpp
server/home-common/: ApiContext.cpp  ApiContext.hpp  ApiMessage.cpp  ApiMessage.hpp  ApiSession.hpp  CMakeLists.txt  Configurations.hpp  Helper.cpp  Helper.hpp  Log.cpp  Log.hpp  Worker.cpp  Worker.hpp  boost.hpp  common.hpp  config.hpp  macros.hpp  memory.hpp  rapidjson.hpp  tools.cpp  xmake.lua
server/home-database/: CMakeLists.txt  Database.cpp  Database.hpp  xmake.lua
server/home-database/empty/: EmptyDatabase.cpp  EmptyDatabase.hpp
server/home-database/sqlite/: SQLiteDatabase.Device.cpp  SQLiteDatabase.Entity.cpp  SQLiteDatabase.Room.cpp  SQLiteDatabase.ScriptSource.cpp  SQLiteDatabase.Service.cpp  SQLiteDatabase.User.cpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp
server/home-main/: CMakeLists.txt  Device.cpp  Device.hpp  DeviceView.cpp  DeviceView.hpp  Entity.cpp  Entity.hpp  Home.Api.cpp  Home.cpp  Home.hpp  HomeView.cpp  HomeView.hpp  Room.cpp  Room.hpp  RoomView.cpp  RoomView.hpp  Service.cpp  Service.hpp  ServiceView.cpp  ServiceView.hpp  xmake.lua
server/home-networking/: ApiContext.cpp  ApiContext.hpp  ApiSession.cpp  ApiSession.hpp  BeaconListener.cpp  BeaconListener.hpp  CMakeLists.txt  HTTPSession.cpp  HTTPSession.hpp  NetworkManager.cpp  NetworkManager.hpp  WSSession.cpp  WSSession.hpp  common.hpp  xmake.lua
server/home-networking/io/: DynamicResources.cpp  DynamicResources.hpp  Mime.cpp  Mime.hpp
server/home-networking/json/: JsonApi.HTTP.cpp  JsonApi.Home.WS.cpp  JsonApi.Scripting.WS.cpp  JsonApi.hpp  (+1 more)
server/home-scripting/: CMakeLists.txt  PropertyFlags.hpp  Script.cpp  Script.hpp  ScriptManager.Api.cpp  ScriptManager.cpp  ScriptManager.hpp  ScriptSource.cpp  ScriptSource.hpp  Scriptable.hpp  View.hpp  common.hpp  xmake.lua
server/home-scripting-javascript/: CMakeLists.txt  JSScript.cpp  JSScript.hpp  JSScriptProvider.cpp  JSScriptProvider.hpp  JSScriptSource.cpp  JSScriptSource.hpp  JSUtils.cpp  JSUtils.hpp  common.hpp  duk_config.h  duktape.c  duktape.cpp  duktape.h  xmake.lua
server/home-scripting-native/: CMakeLists.txt  LibraryInformation.hpp  LibraryInformations.hpp  NativeScript.cpp  NativeScript.hpp  NativeScriptImplementation.cpp  NativeScriptImplementation.hpp  NativeScriptProvider.cpp  NativeScriptProvider.hpp  NativeScriptSource.cpp  NativeScriptSource.hpp  xmake.lua
server/home-server/: CMakeLists.txt  Core.cpp  Core.hpp  main.cpp  websocket_api.md  xmake.lua
server/home-threading/: CMakeLists.txt  Worker.cpp  Worker.hpp
server/home-users/: CMakeLists.txt  User.cpp  User.hpp  UserManager.cpp  UserManager.hpp  xmake.lua
server/homeserver/: ApiContext.cpp  ApiContext.hpp  CMakeLists.txt  Core.IO.cpp  Core.cpp  Core.h  Core.hpp  ExecutionContext.cpp  ExecutionContext.h  ExecutionContext.hpp  Version.h  Version.hpp  common.h  common.hpp  core-info.json  home-info.json  main.cpp  main.hpp  script-info.json  ssl-cert.crt  ssl-cert.pem  ssl-key.pem  tools.cpp  tools.h  tools.hpp  user-info.json  websocket_api.md
server/main/: common.hpp  device.cpp  device.hpp  entity.cpp  entity.hpp  home.cpp  home.hpp  home_api.cpp  room.cpp  room.hpp  service.cpp  service.hpp  xmake.lua
server/plugins/: CMakeLists.txt
server/runner/: CMakeLists.txt  main.cpp
server/scripting/: script.cpp  script.hpp  script_manager.cpp  script_manager.hpp  script_manager_api.cpp  script_source.cpp  script_source.hpp  scriptable.hpp  value.cpp  value.hpp  xmake.lua
server/scripting_javascript/: common.hpp  duk_config.hpp  duktape.hpp  js_script.cpp  js_script.hpp  js_script_provider.cpp  js_script_provider.hpp  js_script_source.cpp  js_script_source.hpp  js_utils.cpp  xmake.lua
server/scripting_native/: library_information.hpp  native_script.cpp  native_script.hpp  native_script_implementation.cpp  native_script_implementation.hpp  native_script_provider.cpp  native_script_provider.hpp  native_script_source.cpp  native_script_source.hpp  xmake.lua
server/scripting_sdk/: library_information.hpp  message_buffer.hpp  script.hpp
server/scripts/: CMakeLists.txt
server/server/: core.cpp  core.hpp  main.cpp  xmake.lua
server/tests/: CMakeLists.txt  common.hpp
server/toolkit/: CMakeLists.txt
(+359 files in other folders)
